--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 </head>
 
 <body>
-
-    
-
     <div class="bigContainer">
+        <div class="header">
+            <row id="head">JavaScript Clock</row>
+        </div>
+        <div class="pic">
+            <row><img src="background/clock.png"></row>
+        </div>
         <div class="container">
             <row id="date"></row>
         </div>
